--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
           <artifactId>exec-maven-plugin</artifactId>
           <version>3.3.0</version>
           <configuration>
-            <mainClass>edu.grinnell.csc207.main.Art80x24</mainClass>
+            <mainClass>edu.grinnell.csc207.experiments.Blocks</mainClass>
           </configuration>
         </plugin>
 
